# ddddocr_fix

./: README.md  pyproject.toml
ocr_fix/: main.py
